--- a/Tourist11.html
+++ b/Tourist11.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+      <audio controls>
+        <source src="./voice/红船.基地信息.mp3" type="audio/mpeg">
+    </audio>
+      <!-- 内容区域 -->
         <p>
           1959年，南湖革命纪念馆根据中共“一大”会议时来嘉兴安排游船的直接当事人王会悟回忆，仿制了一艘丝网船模型，送到北京请中共“一大”代表董必武审定认可。后按模型原样仿制了一艘画舫，作为南湖革命纪念船，供群众瞻仰。船体为单夹弄丝网船，长约16米，宽3米，设有前舱、中舱、房舱和后舱，中舱内设八仙桌及木凳，船艄配有拖梢小船用于接应。
         </p>
