--- a/Tourist12.html
+++ b/Tourist12.html
@@ -34,7 +34,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+      
+      <audio controls>
+        <source src="./voice/红船.背景故事.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
       <p>
         1921年7月底，中国共产党第一次全国代表大会由上海转移到嘉兴南湖一艘画舫上继续举行并闭幕，庄严宣告了中国共产党的诞生。这艘画舫因而获得了一个永载中国革命史册的名字——红船，成为中国革命源头的象征。
       </p>
