--- a/Tourist21.html
+++ b/Tourist21.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+        
+      <audio controls>
+        <source src="./voice/四明山抗日根据地.基地信息.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
         <p>
           为纪念革命史绩和牺牲的烈士，余姚市梁弄镇于1963年创建了四明山革命纪念馆，搜集了一批文物，试行内部开放；文革期间关闭，部分文物散失；1967年将尚存文物搬到梁弄镇让贤横坎头村的原“浙东区党委旧址”，开辟简易陈列室，仍属内部开放；1968年被撤消。到1981年重新大规模修缮，征集革命文物，修建“浙东区委旧址”，编写史料，充实图像画片，以及革命烈士的照片，正式辟为纪念馆，对外开放。同年4月，被浙江省人民政府列为省级重点文物保护单位。馆内陈列着600多种文物，并较系统地介绍了重要史实。纪念馆的西边，“浙东银行旧址”原屋尚在，今已立下碑石，定为县级文物保护单位，其发行的抗币石印版，也陈列在馆内。
         </p>
