--- a/Tourist22.html
+++ b/Tourist22.html
@@ -34,7 +34,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+     
+      <audio controls>
+        <source src="./voice/红船.背景故事.mp3" type="audio/mpeg">
+    </audio> <!-- 内容区域 -->
       <p>
         1941年4月，日军为封锁浙东海岸线，控制宁波等重要港口，以4万兵力发动了宁绍战役，杭甬路两侧、杭州湾以南纵横400里的宁绍地区沦为敌占区。日军烧杀抢掠无恶不作，激起了浙东人民的抗日怒火。浙东地区北起上海，南接福建，西近杭州，东临舟山群岛，是日军侵华后重点控制的登陆点。4月30日，党中央、毛主席电示华中局和新四军军部，指出浙东“有单独成立战略单位之必要，此区有大发展前途，可划为第8师区域”。
       </p>
