--- a/Tourist32.html
+++ b/Tourist32.html
@@ -34,7 +34,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+      
+      <audio controls>
+        <source src="./voice/鲁迅故居.背景故事.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
       <p>
         鲁迅，原名周樟寿，后改名周树人，字豫才，浙江绍兴人，是中国现代文学的奠基人、思想家、革命家。他出身于封建士大夫家庭，早年经历家道中落，17岁考入南京江南水师学堂，后赴日本仙台医学专门学校学医，试图以医学救治国人身体。1906年，因幻灯片事件中目睹国人围观同胞被处决的麻木神情，他弃医从文，决心以文学改造国民精神。
       </p>
