--- a/Tourist41.html
+++ b/Tourist41.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+        
+      <audio controls>
+        <source src="./voice/刘英纪念园陵.基地信息.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
         <p>
           刘英烈士陵园，坐落在马头山麓。紧靠公路的墓道宽6.5米，长62米，由条石铺砌，依地势逐渐升高，通陵寝。墓前平坛长18.3米，宽20.4米，条石铺砌，简朴庄严。墓基为台基式，也用条石铺面，长10.16米，宽20.15米，与平坛之间有踏道相连。墓室呈圆形，下半部墓圈系石砌，上半部填土盖草皮，墓室周围筑石栏杆。中间一座是刘英烈士墓，墓前立石碑一块，碑高2.28米，宽1.14米，上刻“中国共产党浙江省委书记刘英烈士墓”，系粟裕同志所书。左右两边分别为中共衢属特委书记张贵卿、永康六支队革命烈士墓碑墓室。
         </p>
