--- a/Tourist42.html
+++ b/Tourist42.html
@@ -34,7 +34,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+      
+      <audio controls>
+        <source src="./voice/刘英纪念园陵.背景故事.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
       <p>
         刘英，原名刘声沐，江西瑞金人，是中国工农红军挺进师主要领导人、浙西南革命根据地创建者，被誉为“浙江火种”的播撒者。他1929年参加红军并入党，在中央苏区历次反“围剿”中屡建战功，曾于第一次反“围剿”中率部掩护战友撤退，独自抱机枪断后直至全员撤离，展现出非凡的胆识。1934年随红军北上抗日先遣队转战闽浙皖赣，次年1月随方志敏部突围时负重伤，右手致残后改用左手继续战斗，仍坚持指挥作战。
       </p>
