--- a/Tourist51.html
+++ b/Tourist51.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+        
+      <audio controls>
+        <source src="./voice/红军挺进师纪念碑.基地信息.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
         <p>
           纪念碑位于浙江省平阳县山门镇凤岭笔架山，地处浙南革命老区核心地带，毗邻粟裕将军墓、挺进师陈列馆等红色遗址，构成浙西南革命精神的重要地标群。
         <p>
