--- a/Tourist52.html
+++ b/Tourist52.html
@@ -32,7 +32,10 @@
       </nav>
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+      
+      <audio controls>
+        <source src="./voice/红军挺进师纪念碑.背景故事.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
       <p>
         平阳县地处浙南闽东交界，山岭纵横、地形复杂，是浙南革命根据地的核心区域。1935年10月，粟裕、刘英率中国工农红军挺进师主力突破国民党重兵围剿，进入平阳西部山区（今属凤卧镇、山门镇），以此为跳板开辟浙南游击根据地。在此期间，挺进师与平阳地方党组织、游击队紧密协作，发动群众开展土地革命，建立苏维埃政权，并多次粉碎国民党军队的“清剿”行动，如1936年的“珊溪遭遇战”和“峰文堵截战”，成功牵制敌军主力，为中央红军长征减轻压力。
       </p>
