--- a/Tourist71.html
+++ b/Tourist71.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+       
+      <audio controls>
+        <source src="./voice/新四军苏浙军区旧址.基地信息.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
         <p>
           新四军苏浙军区旧址，位于浙江省湖州市长兴县槐坎乡和白岘乡境内。始建于民国三十四年（1945年）。
         <p>
