--- a/Tourist72.html
+++ b/Tourist72.html
@@ -32,7 +32,10 @@
       </nav>
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+      
+      <audio controls>
+        <source src="./voice/新四军苏浙军区旧址.背景故事.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
       <p>
         1944年12月，新四军第一师师长粟裕率第一师主力从苏中南下到达浙西长兴县槐坎地区。1945年1月13日，新四军军部转发中央军委命令：成立新四军苏浙军区，军区司令员粟裕、政委谭震林（未到职）、参谋长刘先胜，政治部主任钟期光，统一指挥苏南与浙东部队。2月5日，新四军苏浙军区在长兴县温塘村正式成立，立即提出了“学习大兵团作战”的口号，各支队开展了山地运动战的战术、技术训练；军区组织团以上干部学习毛泽东著作《中国革命战争的战略问题》，粟裕亲自讲解中央苏区反围剿战例，强调作战中要贯彻集中兵力打歼灭战的原则，各部队必须坚决执行命令，密切协同配合，强调部队要克服本位主义、山头主义、狭隘地方观念，发扬顾全大局、服从统一指挥的优良战斗作风，为部队由分散到集中、由游击战到运动战的转变做好准备。4月，叶飞率部南下编入苏浙军区。
       </p>
