--- a/Tourist81.html
+++ b/Tourist81.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+        
+      <audio controls>
+        <source src="./voice/浙西南革命纪念馆.基地信息.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
         <p>
           浙西南革命根据地纪念馆位于丽水城内南明湖畔，是展示浙西南革命根据地历史的专题性纪念馆，属全国红色旅游经典景区、全国爱国主义教育示范基地，是浙江省党史教育基地、廉洁文化教育基地、国防教育基地、社会科学普及示范基地。
         </p>
