--- a/Tourist31.html
+++ b/Tourist31.html
@@ -35,7 +35,10 @@
 
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-        <!-- 内容区域 -->
+        
+      <audio controls>
+        <source src="./voice/鲁迅故居.基地信息.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
         <p>
           绍兴鲁迅故居位于浙江省绍兴市越城区鲁迅中路241号，是鲁迅诞生及青少年时期生活的重要场所，现为国家5A级旅游景区和全国重点文物保护单位。故居主体为清代台门建筑群，坐北朝南，占地约4000平方米，由周家新台门、老台门及百草园等部分组成，完整保留了鲁迅笔下的生活场景与江南水乡民居特色。
         </p>
