--- a/Tourist62.html
+++ b/Tourist62.html
@@ -32,7 +32,10 @@
       </nav>
     <!-- 内容展示区域 -->
     <main class="content" style="background-image: url('./images/bgc.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
-      <!-- 内容区域 -->
+      
+      <audio controls>
+        <source src="./voice/浙江革命烈士纪念馆.背景故事.mp3" type="audio/mpeg">
+    </audio><!-- 内容区域 -->
       <p>
         钱壮飞，浙江湖州人，中共隐蔽战线"龙潭三杰"之一。1927年大革命失败之后，钱壮飞在北京以挂牌行医、美校教师、报馆编辑等身份为掩护，积极从事党的宣传工作，直至被敌人发觉，只能离开北京。
       </p>
