--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <h3 class="title">探寻红色基因</h3>
 
             <div>
-                <p class="footer-text">小董网站，留下你的足迹</p>
+                <p class="footer-text">留下你的足迹</p>
             </div>
         </div>
     </div>
